[tool.poetry]
name = "Space_Flight"
version = "0.1.0"
description = ""
authors = ["Hendrek Rodrigues <llhendrek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
flasgger = "^0.9.5"
SQLAlchemy = "^1.4.31"
marshmallow = "^3.14.1"
cors = "^1.0.1"
Flask-Cors = "^3.0.10"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
